# Clauderizer

./: .gitattributes  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml
.claude/: settings.json
.claude/skills/clauderizer-do-phase/: SKILL.md
.claude/skills/clauderizer-dream/: SKILL.md
.claude/skills/clauderizer-new-gameplan/: SKILL.md
.claude/skills/clauderizer-record/: SKILL.md
.clauderizer/: conditions.2026-06-21-standing-curator-loop-memory-maintenance.toml  config.toml  dreams.watermark.json  hook.sh  kimi-setup.md  preflight.campaign.toml.example  profile.lock.toml  proposals.dream.jsonl  revision.json
.github/workflows/: publish.yml  quickstart.yml  test.yml
docs/: ARCHITECTURE.md  CROSS-HOST.md  DECISIONS.md  HARDENING.md  INVARIANTS.md  LESSONS.md  RELEASING.md  SKILLS.md  TESTING.md  TROUBLESHOOTING.md  TRUST.md  UPGRADING.md  VISION.md
docs/features/: approval-gates.md  corpus-modernization.md  deliverable-matrix.md  dream-loop.md  init-cli.md  onboarding.md  scoped-memory.md  standing-conditions.md
docs/gameplans/: GAMEPLAN-PROCEDURE.md
docs/gameplans/2026-05-30-clauderizer-v1-bootstrap/: CHAT-HANDOFF-INDEX.md  GAMEPLAN.md  PHASE-STATUS.md
docs/gameplans/2026-06-09-agent-autonomy/: CHAT-HANDOFF-INDEX.md  GAMEPLAN.md  PHASE-STATUS.md  POST-MORTEM.md
docs/gameplans/2026-06-09-context-economics/: CHAT-HANDOFF-INDEX.md  GAMEPLAN.md  PHASE-STATUS.md  POST-MORTEM.md
docs/gameplans/2026-06-09-discipline-seams/: CHAT-HANDOFF-INDEX.md  GAMEPLAN.md  PHASE-STATUS.md  POST-MORTEM.md
docs/gameplans/2026-06-09-engine-structural-robustness/: CHAT-HANDOFF-INDEX.md  GAMEPLAN.md  PHASE-STATUS.md  POST-MORTEM.md
docs/gameplans/2026-06-09-upgrade-clauderizer-gracefully/: CHAT-HANDOFF-INDEX.md  GAMEPLAN.md  PHASE-STATUS.md
docs/gameplans/2026-06-10-alpha-to-beta-evidence/: CHAT-HANDOFF-INDEX.md  GAMEPLAN.md  PHASE-STATUS.md  POST-MORTEM.md
docs/gameplans/2026-06-10-beta-flip/: CHAT-HANDOFF-INDEX.md  GAMEPLAN.md  PHASE-STATUS.md  POST-MORTEM.md
docs/gameplans/2026-06-10-harness-truth-and-release-ritual/: CHAT-HANDOFF-INDEX.md  GAMEPLAN.md  PHASE-STATUS.md  POST-MORTEM.md
docs/gameplans/2026-06-10-stranger-readiness/: CHAT-HANDOFF-INDEX.md  GAMEPLAN.md  PHASE-STATUS.md  POST-MORTEM.md
docs/gameplans/2026-06-17-semantic-recall/: CHAT-HANDOFF-INDEX.md  GAMEPLAN.md  PHASE-STATUS.md  POST-MORTEM.md
docs/gameplans/2026-06-17-spec-kit-discipline-gates/: CHAT-HANDOFF-INDEX.md  GAMEPLAN.md  PHASE-STATUS.md  POST-MORTEM.md
docs/gameplans/2026-06-18-storm-inspired-curation-methods/: CHAT-HANDOFF-INDEX.md  GAMEPLAN.md  PHASE-STATUS.md  POST-MORTEM.md
docs/gameplans/2026-06-18-storm-self-critique-gate/: CHAT-HANDOFF-INDEX.md  GAMEPLAN.md  PHASE-STATUS.md  POST-MORTEM.md
docs/gameplans/2026-06-19-headroom-borrowed-ideas/: CHAT-HANDOFF-INDEX.md  GAMEPLAN.md  PHASE-STATUS.md  POST-MORTEM.md
docs/gameplans/2026-06-19-kimi-lifecycle-integration/: CHAT-HANDOFF-INDEX.md  GAMEPLAN.md  PHASE-STATUS.md
docs/gameplans/2026-06-20-empirical-memory-gains/: CHAT-HANDOFF-INDEX.md  GAMEPLAN.md  PHASE-STATUS.md  POST-MORTEM.md
docs/gameplans/2026-06-21-cross-host-cross-model-clauderizer-universal-agents-md-mcp-substrate/: CHAT-HANDOFF-INDEX.md  GAMEPLAN.md  PHASE-STATUS.md  POST-MORTEM.md
docs/gameplans/2026-06-21-empirical-self-improvement-loop-telemetry-gated-curator-and-loop-gameplan-primitive/: CHAT-HANDOFF-INDEX.md  GAMEPLAN.md  PHASE-STATUS.md  POST-MORTEM.md
docs/gameplans/2026-06-21-standing-curator-loop-memory-maintenance/: CHAT-HANDOFF-INDEX.md  GAMEPLAN.md  PHASE-STATUS.md
docs/gameplans/2026-06-22-skill-awareness/: CHAT-HANDOFF-INDEX.md  GAMEPLAN.md  PHASE-STATUS.md  POST-MORTEM.md
docs/gameplans/2026-06-23-dogfood-followup-findings/: CHAT-HANDOFF-INDEX.md  GAMEPLAN.md  PHASE-STATUS.md  POST-MORTEM.md
docs/gameplans/2026-06-23-product-doc-deconflation/: CHAT-HANDOFF-INDEX.md  GAMEPLAN.md  PHASE-STATUS.md  POST-MORTEM.md
docs/gameplans/2026-06-23-stranger-readiness-dogfood/: CHAT-HANDOFF-INDEX.md  GAMEPLAN.md  PHASE-STATUS.md
docs/gameplans/2026-06-24-critique-bias-hardening/: CHAT-HANDOFF-INDEX.md  GAMEPLAN.md  PHASE-STATUS.md  POST-MORTEM.md
docs/gameplans/2026-06-24-ranker-spike/: CHAT-HANDOFF-INDEX.md  GAMEPLAN.md  PHASE-STATUS.md  POST-MORTEM.md
docs/gameplans/2026-06-25-abstract-index-fast-retrieval/: CHAT-HANDOFF-INDEX.md  GAMEPLAN.md  PHASE-STATUS.md  POST-MORTEM.md
docs/subsystems/: graph.md  kinds.md  markdown-core.md  mcp-server.md  mutations.md  profiles.md  rituals.md  scaffold.md
scripts/: wiring_matrix.ps1
src/clauderizer/: __init__.py  _stdio.py  analyze.py  assets.py  bespoke_hosts.py  cli.py  config.py  contract.py  dreams.py  hosts.py  hosttargets.py  kimidesktop.py  learn.py  listing.py  locking.py  mcp_probe.py  mcp_server.py  model.py  modernize.py  mutations.py  onboard.py  ops.py  paths.py  proposals.py  release_check.py  revision.py  session.py  skill_discovery.py  telemetry.py  tools_list.py  winhost.py
tests/: conftest.py  test_abstract_index.py  test_abstract_index_upgrade.py  test_analyze.py  test_approval_gates.py  test_audit.py  test_back_compat_focus.py  test_bespoke_hosts.py  test_blessed_surfaces.py  test_canonical_tokenizer.py  test_cascade.py  test_cascade_reports.py  test_consumer_leg.py  test_contract_corpus.py  test_contract_surface.py  test_critique.py  test_cross_gameplan.py  test_curator.py  test_dag_validity.py  test_deliverable_matrix.py  test_diverse_robustness.py  test_dreams.py  test_edge_suggester.py  test_engine_hardening.py  test_exit_criteria.py  test_failure_miner.py  test_failure_modes.py  test_field_fixes_152.py  test_field_fixes_153.py  test_focus_portfolio.py  test_frontmatter.py  test_handoff_focus.py  test_handoff_relevance.py  test_hook_dispatch.py  test_hook_wrapper.py  test_host_target_init.py  test_hosts.py  test_hosttargets.py  test_index.py  test_init.py  (+47 more)
tests/benchmarks/: README.md  __init__.py  agent_eval.py  corpora.py  cost.py  harness.py  metrics.py  test_benchmarks.py  test_cost.py
(+437 files in other folders)
