[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clauderizer"
version = "0.1.0"
description = "Drop-in, MCP-native working memory for AI agents: gameplans, phases, a dependency graph, and post-hoc cascade — over plain markdown."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Clauderizer contributors" }]
keywords = ["claude", "mcp", "agents", "planning", "gameplan", "memory"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
# The core engine has ZERO runtime dependencies (stdlib only: tomllib, dataclasses,
# argparse). Frontmatter is parsed by a vendored minimal YAML subset. This keeps
# Clauderizer a true drop-in — `uvx clauderizer init` needs nothing else.
dependencies = []

[project.optional-dependencies]
# The MCP server is the only thing that needs the official SDK. Install with
# `pipx install "clauderizer[mcp]"` to expose the agentic tool surface.
mcp = ["mcp>=1.2"]
dev = ["pytest>=7"]

[project.scripts]
clauderize = "clauderizer.cli:main"
clauderizer-mcp = "clauderizer.mcp_server:main"
clauderizer-hook = "clauderizer.hook.sessionstart:main"

[project.urls]
Homepage = "https://github.com/collincusce/clauderizer"
Source = "https://github.com/collincusce/clauderizer"

[tool.hatch.build.targets.wheel]
packages = ["src/clauderizer"]

[tool.hatch.build.targets.wheel.force-include]
"src/clauderizer/templates" = "clauderizer/templates"
"src/clauderizer/profiles" = "clauderizer/profiles"
"src/clauderizer/skills" = "clauderizer/skills"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
