[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clauderizer"
version = "1.8.0"
description = "Drop-in, MCP-native working memory for AI agents: gameplans, phases, a dependency graph, and post-hoc cascade — over plain markdown."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Clauderizer contributors" }]
keywords = ["claude", "mcp", "agents", "planning", "gameplan", "memory"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
# The core engine has ZERO runtime dependencies (stdlib only: tomllib, dataclasses,
# argparse). Frontmatter is parsed by a vendored minimal YAML subset. This keeps
# Clauderizer a true drop-in — `uvx --from clauderizer clauderize init` needs nothing else.
dependencies = []

[project.optional-dependencies]
# The MCP server is the only thing that needs the official SDK. Install with
# `pipx install "clauderizer[mcp]"` to expose the agentic tool surface.
mcp = ["mcp>=1.2"]
dev = ["pytest>=7"]

[project.scripts]
clauderize = "clauderizer.cli:main"
# Alias so the intuitive `uvx clauderizer <cmd>` also works; `clauderize` stays
# the canonical command (F1 — the package and the command then share a name).
clauderizer = "clauderizer.cli:main"
clauderizer-mcp = "clauderizer.mcp_server:main"
clauderizer-hook = "clauderizer.hook.dispatch:main"

[project.urls]
Homepage = "https://github.com/collincusce/Clauderizer"
Source = "https://github.com/collincusce/Clauderizer"
Issues = "https://github.com/collincusce/Clauderizer/issues"
Changelog = "https://github.com/collincusce/Clauderizer/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
# `packages` already bundles every file under src/clauderizer — including the
# templates/, profiles/, and skills/ data dirs — so no force-include is needed
# (and adding one collides with `packages`, breaking the wheel build).
packages = ["src/clauderizer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
